[gd_scene load_steps=19 format=3 uid="uid://cuy5wqtwv254g"]

[ext_resource type="Script" uid="uid://7jrphqhnhdd0" path="res://xr/player_artillery.gd" id="1_dl8w8"]
[ext_resource type="Material" uid="uid://cej2fi5vo4hky" path="res://xr/artillery_material.tres" id="1_dny1d"]
[ext_resource type="Material" uid="uid://d2bbsfstpvu7m" path="res://xr/material_generic_metal.tres" id="2_wv7so"]
[ext_resource type="PackedScene" uid="uid://cme66uldrjl2i" path="res://addons/godot-xr-tools/interactables/interactable_area_button.tscn" id="4_2r25d"]
[ext_resource type="Script" uid="uid://d044axdhfeohg" path="res://xr/dashboard.gd" id="4_7g84s"]
[ext_resource type="AudioStream" uid="uid://bngaenut45u0e" path="res://ui/sounds/snare_roll_3.wav" id="6_shrdf"]

[sub_resource type="BoxShape3D" id="BoxShape3D_wv7so"]
size = Vector3(16, 1.5, 1)

[sub_resource type="BoxMesh" id="BoxMesh_yglro"]
size = Vector3(16, 1, 16)

[sub_resource type="CylinderMesh" id="CylinderMesh_dny1d"]
height = 20.0
radial_segments = 6
rings = 16

[sub_resource type="CylinderMesh" id="CylinderMesh_wv7so"]
top_radius = 1.0
bottom_radius = 1.0
height = 3.0
radial_segments = 6
rings = 3

[sub_resource type="BoxMesh" id="BoxMesh_dl8w8"]
size = Vector3(6, 0.5, 2)

[sub_resource type="BoxShape3D" id="BoxShape3D_2r25d"]
size = Vector3(2.5, 6, 2)

[sub_resource type="BoxMesh" id="BoxMesh_wv7so"]
size = Vector3(16, 1, 16)

[sub_resource type="BoxShape3D" id="BoxShape3D_dl8w8"]
size = Vector3(16, 1, 16)

[sub_resource type="BoxMesh" id="BoxMesh_7g84s"]
size = Vector3(2, 0.25, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_shrdf"]
size = Vector3(2, 0.25, 1)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_2r25d"]
height = 0.1
radius = 0.1

[sub_resource type="CylinderMesh" id="CylinderMesh_7g84s"]
top_radius = 0.1
bottom_radius = 0.1
height = 0.1
radial_segments = 8
rings = 1

[node name="PlayerArtillery" type="Node3D"]
script = ExtResource("1_dl8w8")

[node name="StaticBody3D" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, -8)

[node name="Wall" type="CSGBox3D" parent="StaticBody3D"]
material_override = ExtResource("1_dny1d")
size = Vector3(16, 10, 1)

[node name="CSGBox3D" type="CSGBox3D" parent="StaticBody3D/Wall"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, -3, 0)
operation = 2
size = Vector3(3, 1, 1)

[node name="CSGBox3D2" type="CSGBox3D" parent="StaticBody3D/Wall"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, -3, 0)
operation = 2
size = Vector3(3, 1, 1)

[node name="CSGBox3D3" type="CSGBox3D" parent="StaticBody3D/Wall"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 2, 0)
operation = 2
size = Vector3(3, 1, 1)

[node name="CSGBox3D4" type="CSGBox3D" parent="StaticBody3D/Wall"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 2, 0)
operation = 2
size = Vector3(3, 1, 1)

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -4.25, 0)
shape = SubResource("BoxShape3D_wv7so")

[node name="StaticBody3D2" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 8)

[node name="Wall" type="CSGBox3D" parent="StaticBody3D2"]
material_override = ExtResource("1_dny1d")
size = Vector3(16, 10, 1)

[node name="CSGBox3D" type="CSGBox3D" parent="StaticBody3D2/Wall"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, -3, 0)
operation = 2
size = Vector3(3, 1, 1)

[node name="CSGBox3D2" type="CSGBox3D" parent="StaticBody3D2/Wall"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, -3, 0)
operation = 2
size = Vector3(3, 1, 1)

[node name="CSGBox3D3" type="CSGBox3D" parent="StaticBody3D2/Wall"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 2, 0)
operation = 2
size = Vector3(3, 1, 1)

[node name="CSGBox3D4" type="CSGBox3D" parent="StaticBody3D2/Wall"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 2, 0)
operation = 2
size = Vector3(3, 1, 1)

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -4.25, 0)
shape = SubResource("BoxShape3D_wv7so")

[node name="StaticBody3D3" type="StaticBody3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 8, 5, 0)

[node name="Wall" type="CSGBox3D" parent="StaticBody3D3"]
material_override = ExtResource("1_dny1d")
size = Vector3(16, 10, 1)

[node name="CSGBox3D" type="CSGBox3D" parent="StaticBody3D3/Wall"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0, 0)
operation = 2
size = Vector3(3, 1, 1)

[node name="CSGBox3D2" type="CSGBox3D" parent="StaticBody3D3/Wall"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 0, 0)
operation = 2
size = Vector3(3, 1, 1)

[node name="CSGBox3D3" type="CSGBox3D" parent="StaticBody3D3/Wall"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 2, 0)
operation = 2
size = Vector3(3, 1, 1)

[node name="CSGBox3D4" type="CSGBox3D" parent="StaticBody3D3/Wall"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 2, 0)
operation = 2
size = Vector3(3, 1, 1)

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -4.25, 0)
shape = SubResource("BoxShape3D_wv7so")

[node name="StaticBody3D4" type="StaticBody3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -8, 5, 0)

[node name="Wall" type="CSGBox3D" parent="StaticBody3D4"]
material_override = ExtResource("1_dny1d")
size = Vector3(16, 10, 1)

[node name="CSGBox3D" type="CSGBox3D" parent="StaticBody3D4/Wall"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0, 0)
operation = 2
size = Vector3(3, 1, 1)

[node name="CSGBox3D2" type="CSGBox3D" parent="StaticBody3D4/Wall"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 0, 0)
operation = 2
size = Vector3(3, 1, 1)

[node name="CSGBox3D3" type="CSGBox3D" parent="StaticBody3D4/Wall"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 2, 0)
operation = 2
size = Vector3(3, 1, 1)

[node name="CSGBox3D4" type="CSGBox3D" parent="StaticBody3D4/Wall"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 2, 0)
operation = 2
size = Vector3(3, 1, 1)

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -4.25, 0)
shape = SubResource("BoxShape3D_wv7so")

[node name="Ceiling" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10, 0)
material_override = ExtResource("1_dny1d")
mesh = SubResource("BoxMesh_yglro")

[node name="Cannon" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 2)

[node name="Barrel" type="Node3D" parent="Cannon"]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Cannon/Barrel"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10, 0)
material_override = ExtResource("2_wv7so")
mesh = SubResource("CylinderMesh_dny1d")
skeleton = NodePath("../..")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Cannon/Barrel"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
material_override = ExtResource("2_wv7so")
mesh = SubResource("CylinderMesh_wv7so")
skeleton = NodePath("../..")

[node name="StaticBody3D" type="StaticBody3D" parent="Cannon/Barrel"]
collision_layer = 0
collision_mask = 0

[node name="MeshInstance3D3" type="MeshInstance3D" parent="Cannon/Barrel/StaticBody3D"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -1, -2, 0)
material_override = ExtResource("2_wv7so")
mesh = SubResource("BoxMesh_dl8w8")
skeleton = NodePath("../../..")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="Cannon/Barrel/StaticBody3D"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 1, -2, 0)
material_override = ExtResource("2_wv7so")
mesh = SubResource("BoxMesh_dl8w8")
skeleton = NodePath("../../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Cannon/Barrel/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2, 0)
shape = SubResource("BoxShape3D_2r25d")

[node name="Loader" type="Node3D" parent="Cannon"]

[node name="Floor" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Floor"]
material_override = ExtResource("1_dny1d")
mesh = SubResource("BoxMesh_wv7so")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Floor"]
shape = SubResource("BoxShape3D_dl8w8")

[node name="Dashboard" type="Node3D" parent="." node_paths=PackedStringArray("sfx_turn_start", "shoot_button", "angle_right_button", "angle_left_button", "power_up_button", "power_down_button", "weapon_cycle_button", "angle_label", "power_label", "weapon_label")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.30095, -6)
script = ExtResource("4_7g84s")
sfx_turn_start = NodePath("TurnStarted")
shoot_button = NodePath("Dash/ShootButton")
angle_right_button = NodePath("Dash/AngleRightButton")
angle_left_button = NodePath("Dash/AngleLeftButton")
power_up_button = NodePath("Dash/PowerUpButton")
power_down_button = NodePath("Dash/PowerDownButton")
weapon_cycle_button = NodePath("Dash/ChangeWeaponButton")
angle_label = NodePath("Angle")
power_label = NodePath("Power")
weapon_label = NodePath("Weapon")

[node name="Weapon" type="Label3D" parent="Dashboard"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.124616, 0.357922, -0.489351)
text = "Weapon"
font_size = 28

[node name="Angle" type="Label3D" parent="Dashboard"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.794345, 0.627012, -0.489351)
text = "Aim Angle"
font_size = 16
outline_size = 8

[node name="Power" type="Label3D" parent="Dashboard"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.368302, 0.627, -0.489)
text = "Power"
font_size = 16
outline_size = 8

[node name="Dash" type="StaticBody3D" parent="Dashboard"]
transform = Transform3D(1, 0, 0, 0, 0.866025, -0.5, 0, 0.5, 0.866025, 0, 0, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Dashboard/Dash"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.15182, -0.0876532)
mesh = SubResource("BoxMesh_7g84s")
skeleton = NodePath("../../root/@EditorNode@21305/@Panel@14/@VBoxContainer@15/DockHSplitLeftL/DockHSplitLeftR/DockHSplitMain/@VBoxContainer@26/DockVSplitCenter/@VSplitContainer@54/@VBoxContainer@55/@EditorMainScreen@102/MainScreen/@CanvasItemEditor@11482/@VSplitContainer@11134/@HSplitContainer@11136/@HSplitContainer@11138/@Control@11139/@SubViewportContainer@11140/@SubViewport@11141/PlayerArtillery/Dashboard")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Dashboard/Dash"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.151378, -0.0878258)
shape = SubResource("BoxShape3D_shrdf")

[node name="ShootButton" parent="Dashboard/Dash" instance=ExtResource("4_2r25d")]
transform = Transform3D(1, 0, 0, 0, 1, -2.08616e-07, 0, 2.08616e-07, 1, 0.69277, 2.65956e-08, -0.158736)
button = NodePath("Button")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Dashboard/Dash/ShootButton"]
shape = SubResource("CylinderShape3D_2r25d")

[node name="Button" type="MeshInstance3D" parent="Dashboard/Dash/ShootButton"]
mesh = SubResource("CylinderMesh_7g84s")

[node name="DebugButtonLabel" type="Label3D" parent="Dashboard/Dash/ShootButton/Button"]
transform = Transform3D(1, 0, 0, 0, -2.98023e-08, 1, 0, -1, -2.98023e-08, 0, 0.0924242, 0)
text = "Fire"
font_size = 28

[node name="ChangeWeaponButton" parent="Dashboard/Dash" instance=ExtResource("4_2r25d")]
transform = Transform3D(1, 0, 0, 0, 1, -2.08616e-07, 0, 2.08616e-07, 1, 0.109076, 0, 0)
button = NodePath("Button")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Dashboard/Dash/ChangeWeaponButton"]
shape = SubResource("CylinderShape3D_2r25d")

[node name="Button" type="MeshInstance3D" parent="Dashboard/Dash/ChangeWeaponButton"]
mesh = SubResource("CylinderMesh_7g84s")

[node name="DebugButtonLabel" type="Label3D" parent="Dashboard/Dash/ChangeWeaponButton/Button"]
transform = Transform3D(1, 0, 0, 0, -2.98023e-08, 1, 0, -1, -2.98023e-08, 0, 0.0924242, 0)
text = ">"

[node name="AngleLeftButton" parent="Dashboard/Dash" instance=ExtResource("4_2r25d")]
transform = Transform3D(1, 0, 0, 0, 1, -2.08616e-07, 0, 2.08616e-07, 1, -0.794345, -2.38419e-07, 0.202787)
button = NodePath("Button")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Dashboard/Dash/AngleLeftButton"]
shape = SubResource("CylinderShape3D_2r25d")

[node name="Button" type="MeshInstance3D" parent="Dashboard/Dash/AngleLeftButton"]
mesh = SubResource("CylinderMesh_7g84s")

[node name="DebugButtonLabel" type="Label3D" parent="Dashboard/Dash/AngleLeftButton/Button"]
transform = Transform3D(1, 0, 0, 0, -2.98023e-08, 1, 0, -1, -2.98023e-08, 0, 0.0924242, 0)
text = "-"

[node name="AngleRightButton" parent="Dashboard/Dash" instance=ExtResource("4_2r25d")]
transform = Transform3D(1, 0, 0, 0, 1, -2.08616e-07, 0, 2.08616e-07, 1, -0.794345, 4.76837e-07, -0.271795)
button = NodePath("Button")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Dashboard/Dash/AngleRightButton"]
shape = SubResource("CylinderShape3D_2r25d")

[node name="Button" type="MeshInstance3D" parent="Dashboard/Dash/AngleRightButton"]
mesh = SubResource("CylinderMesh_7g84s")

[node name="DebugButtonLabel" type="Label3D" parent="Dashboard/Dash/AngleRightButton/Button"]
transform = Transform3D(1, 0, 0, 0, -2.98023e-08, 1, 0, -1, -2.98023e-08, 0, 0.0924244, 0)
text = "+"

[node name="PowerDownButton" parent="Dashboard/Dash" instance=ExtResource("4_2r25d")]
transform = Transform3D(1, 0, 0, 0, 1, -2.08616e-07, 0, 2.08616e-07, 1, -0.368302, -2.38419e-07, 0.202787)
button = NodePath("Button")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Dashboard/Dash/PowerDownButton"]
shape = SubResource("CylinderShape3D_2r25d")

[node name="Button" type="MeshInstance3D" parent="Dashboard/Dash/PowerDownButton"]
mesh = SubResource("CylinderMesh_7g84s")

[node name="DebugButtonLabel" type="Label3D" parent="Dashboard/Dash/PowerDownButton/Button"]
transform = Transform3D(1, 0, 0, 0, -2.98023e-08, 1, 0, -1, -2.98023e-08, 0, 0.0924242, 0)
text = "-"

[node name="PowerUpButton" parent="Dashboard/Dash" instance=ExtResource("4_2r25d")]
transform = Transform3D(1, 0, 0, 0, 1, -2.08616e-07, 0, 2.08616e-07, 1, -0.368302, 4.76837e-07, -0.271795)
button = NodePath("Button")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Dashboard/Dash/PowerUpButton"]
shape = SubResource("CylinderShape3D_2r25d")

[node name="Button" type="MeshInstance3D" parent="Dashboard/Dash/PowerUpButton"]
mesh = SubResource("CylinderMesh_7g84s")

[node name="DebugButtonLabel" type="Label3D" parent="Dashboard/Dash/PowerUpButton/Button"]
transform = Transform3D(1, 0, 0, 0, -2.98023e-08, 1, 0, -1, -2.98023e-08, 0, 0.0924244, 0)
text = "+"

[node name="TurnStarted" type="AudioStreamPlayer3D" parent="Dashboard"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 7, 0)
stream = ExtResource("6_shrdf")
bus = &"Interior"

[connection signal="button_pressed" from="Dashboard/Dash/ShootButton" to="Dashboard" method="_on_shoot_button_button_pressed"]
[connection signal="button_pressed" from="Dashboard/Dash/ChangeWeaponButton" to="Dashboard" method="_on_shoot_button_button_pressed"]
[connection signal="button_pressed" from="Dashboard/Dash/AngleLeftButton" to="Dashboard" method="_on_angle_left_button_button_pressed"]
[connection signal="button_released" from="Dashboard/Dash/AngleLeftButton" to="Dashboard" method="_on_angle_left_button_button_released"]
[connection signal="button_pressed" from="Dashboard/Dash/AngleRightButton" to="Dashboard" method="_on_angle_right_button_button_pressed"]
[connection signal="button_released" from="Dashboard/Dash/AngleRightButton" to="Dashboard" method="_on_angle_right_button_button_released"]
[connection signal="button_pressed" from="Dashboard/Dash/PowerDownButton" to="Dashboard" method="_on_power_down_button_button_pressed"]
[connection signal="button_released" from="Dashboard/Dash/PowerDownButton" to="Dashboard" method="_on_power_down_button_button_released"]
[connection signal="button_pressed" from="Dashboard/Dash/PowerUpButton" to="Dashboard" method="_on_power_up_button_button_pressed"]
[connection signal="button_released" from="Dashboard/Dash/PowerUpButton" to="Dashboard" method="_on_power_up_button_button_released"]
